#0 | Code cleanup